

INCLUDE_DIRECTORIES(
${BULLET_PHYSICS_SOURCE_DIR}/src 
${BULLET_PHYSICS_SOURCE_DIR}/Extras/OpenCL/Shared
${BULLET_PHYSICS_SOURCE_DIR}/Demos/OpenGL
)

ADD_DEFINITIONS(-DUSE_MINICL)

IF(WIN32)
IF (CMAKE_CL_64)
	SET(CMAK_GLEW_LIBRARY	${BULLET_PHYSICS_SOURCE_DIR}/Glut/glew64.lib	)
ELSE(CMAKE_CL_64)
	SET(CMAK_GLEW_LIBRARY		${BULLET_PHYSICS_SOURCE_DIR}/Glut/glew32.lib		)
ENDIF(CMAKE_CL_64)
ENDIF(WIN32)


IF (USE_GLUT)
	LINK_LIBRARIES(
		OpenGLSupport 
		BulletCollision 
		BulletDynamics 
		BulletMultiThreaded 
		LinearMath 
		${GLUT_glut_LIBRARY} 
		${OPENGL_gl_LIBRARY} 
		${OPENGL_glu_LIBRARY}
		${CMAK_GLEW_LIBRARY}
		3dGridBroadphaseOCL_Mini
		Hier3dGridBroadphaseOCL_Mini
	)


	ADD_EXECUTABLE(AppCDTestDemo_Mini
					${BULLET_PHYSICS_SOURCE_DIR}/Demos/CDTest/CDTestDemo.h
					${BULLET_PHYSICS_SOURCE_DIR}/Demos/CDTest/CDTestDemo.cpp
					${BULLET_PHYSICS_SOURCE_DIR}/Demos/CDTest/main.cpp
	)
ELSE (USE_GLUT)
ENDIF (USE_GLUT)


IF(WIN32)
IF (CMAKE_CL_64)
	IF (NOT INTERNAL_CREATE_DISTRIBUTABLE_MSVC_PROJECTFILES)
		ADD_CUSTOM_COMMAND(	TARGET AppCDTestDemo_Mini		POST_BUILD
					COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${BULLET_PHYSICS_SOURCE_DIR}/glut64.dll ${CMAKE_CURRENT_BINARY_DIR}	)
		ADD_CUSTOM_COMMAND(	TARGET AppCDTestDemo_Mini	POST_BUILD
					COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${BULLET_PHYSICS_SOURCE_DIR}/GLEW64.DLL ${CMAKE_CURRENT_BINARY_DIR})
	ENDIF()
ELSE(CMAKE_CL_64)
	IF (NOT INTERNAL_CREATE_DISTRIBUTABLE_MSVC_PROJECTFILES)
		ADD_CUSTOM_COMMAND(	TARGET AppCDTestDemo_Mini	POST_BUILD
					COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${BULLET_PHYSICS_SOURCE_DIR}/GLUT32.DLL ${CMAKE_CURRENT_BINARY_DIR})
		ADD_CUSTOM_COMMAND(	TARGET AppCDTestDemo_Mini	POST_BUILD
					COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${BULLET_PHYSICS_SOURCE_DIR}/GLEW32.DLL ${CMAKE_CURRENT_BINARY_DIR})
	ENDIF()
ENDIF(CMAKE_CL_64)
ENDIF(WIN32)

IF (UNIX)
  TARGET_LINK_LIBRARIES(AppCDTestDemo_Mini pthread)
ENDIF(UNIX)

