

INCLUDE_DIRECTORIES(
${BULLET_PHYSICS_SOURCE_DIR}/src 
${BULLET_PHYSICS_SOURCE_DIR}/Extras/OpenCL/Shared
${BULLET_PHYSICS_SOURCE_DIR}/Demos/OpenGL
)

IF (INTERNAL_CREATE_DISTRIBUTABLE_MSVC_PROJECTFILES)
	INCLUDE_DIRECTORIES(		$ENV{==AMDAPPSDKROOT=}/include )
	IF (CMAKE_CL_64)
		SET(CMAK_AMDAPPSDKROOT_LIBPATH 		$ENV{==AMDAPPSDKROOT=}/lib/x86_64		)
	ELSE(CMAKE_CL_64)
		SET(CMAK_AMDAPPSDKROOT_LIBPATH		$ENV{==AMDAPPSDKROOT=}/lib/x86		)
	ENDIF(CMAKE_CL_64)
ELSE()
	INCLUDE_DIRECTORIES(		$ENV{AMDAPPSDKROOT}/include	)
	IF (CMAKE_CL_64)
		SET(CMAK_AMDAPPSDKROOT_LIBPATH 		$ENV{AMDAPPSDKROOT}/lib/x86_64 )
	ELSE(CMAKE_CL_64)
		SET(CMAK_AMDAPPSDKROOT_LIBPATH		$ENV{AMDAPPSDKROOT}/lib/x86		)
	ENDIF(CMAKE_CL_64)
ENDIF()




IF (USE_GLUT)
	LINK_LIBRARIES(
		OpenGLSupport 
		BulletDynamics  
		BulletCollision 
		BulletMultiThreaded 
		LinearMath 
		${GLUT_glut_LIBRARY} 
		${OPENGL_gl_LIBRARY} 
		${OPENGL_glu_LIBRARY}
		3dGridBroadphaseOCL_AMD
		${CMAK_AMDAPPSDKROOT_LIBPATH}/OpenCL.lib
	)


	ADD_EXECUTABLE(AppGpu3dDemo_AMD
					${BULLET_PHYSICS_SOURCE_DIR}/Demos/Gpu3dDemo/BasicDemo3d.h
					${BULLET_PHYSICS_SOURCE_DIR}/Demos/Gpu3dDemo/btGpuDefines.h
					${BULLET_PHYSICS_SOURCE_DIR}/Demos/Gpu3dDemo/btGpuDemo3dOCLWrap.h
					${BULLET_PHYSICS_SOURCE_DIR}/Demos/Gpu3dDemo/btGpuDemo3dSharedCode.h
					${BULLET_PHYSICS_SOURCE_DIR}/Demos/Gpu3dDemo/btGpuDemo3dSharedDefs.h
					${BULLET_PHYSICS_SOURCE_DIR}/Demos/Gpu3dDemo/btGpuDemo3dSharedTypes.h
					${BULLET_PHYSICS_SOURCE_DIR}/Demos/Gpu3dDemo/btGpuDemoDynamicsWorld3D.h
					${BULLET_PHYSICS_SOURCE_DIR}/Demos/Gpu3dDemo/btOclUtils.h	
					${BULLET_PHYSICS_SOURCE_DIR}/Demos/Gpu3dDemo/BasicDemo3d.cpp
					${BULLET_PHYSICS_SOURCE_DIR}/Demos/Gpu3dDemo/btGpu3dDemoOCLWrap.cpp
					${BULLET_PHYSICS_SOURCE_DIR}/Demos/Gpu3dDemo/btGpuDemo3dCpuFunc.cpp
					${BULLET_PHYSICS_SOURCE_DIR}/Demos/Gpu3dDemo/btGpuDemoDynamicsWorld3D.cpp
					${BULLET_PHYSICS_SOURCE_DIR}/Demos/Gpu3dDemo/btOclUtils.cpp
					${BULLET_PHYSICS_SOURCE_DIR}/Demos/Gpu3dDemo/main.cpp	
					${BULLET_PHYSICS_SOURCE_DIR}/Demos/Gpu3dDemo/Gpu3dDemoOCL.cl	
	)
	
	IF (NOT INTERNAL_CREATE_MSVC_RELATIVE_PATH_PROJECTFILES)
			IF (CMAKE_CL_64)
				ADD_CUSTOM_COMMAND(
					TARGET AppGpu3dDemo_AMD
					POST_BUILD
					COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${BULLET_PHYSICS_SOURCE_DIR}/glut64.dll ${CMAKE_CURRENT_BINARY_DIR}
					COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${BULLET_PHYSICS_SOURCE_DIR}/Demos/Gpu3dDemo/Gpu3dDemoOCL.cl ${CMAKE_CURRENT_BINARY_DIR}
				)
			ELSE(CMAKE_CL_64)
				ADD_CUSTOM_COMMAND(
					TARGET AppGpu3dDemo_AMD
					POST_BUILD
					COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${BULLET_PHYSICS_SOURCE_DIR}/GLUT32.DLL ${CMAKE_CURRENT_BINARY_DIR}
					COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${BULLET_PHYSICS_SOURCE_DIR}/Demos/Gpu3dDemo/Gpu3dDemoOCL.cl ${CMAKE_CURRENT_BINARY_DIR}
				)
			ENDIF(CMAKE_CL_64)
		ENDIF (NOT INTERNAL_CREATE_MSVC_RELATIVE_PATH_PROJECTFILES)
ELSE (USE_GLUT)
ENDIF (USE_GLUT)

IF (UNIX)
  TARGET_LINK_LIBRARIES(AppGpu3dDemo_AMD pthread)
ENDIF(UNIX)

